--- a/Rotacio0/res/values/strings.xml
+++ b/Rotacio0/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rotacio0</string>
-    <string name="titol">Comportament d\'un Activity quan rotem la pantalla!</string>
+    <string name="titol">Introduce primero tu nombre, luego tu género y si tienes carnet de conducir</string><string name="app_name">Rotacio0</string>
+    
     <string name="action_settings">Configuració</string>
 
 </resources>
