Signed-off-by: Areikusu <aleix.casanova@gmail.com>

--- a/LogiPop/res/values/strings.xml
+++ b/LogiPop/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="inicio">0</string>
     <string name="boton">Lógicamente</string>
     <string name="zelda">zelda</string>
+    <string name="pajarito">TODO</string>
 
 </resources>
